<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<androidx.constraintlayout.widget.ConstraintLayout

    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity" >

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:background="@android:color/transparent"
        android:elevation="0dp"
        android:layout_marginTop="32dp"

        android:theme="@style/ThemeOverlay.Material3.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="" />


    <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="190dp"
                    android:layout_height="190dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/imageView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/hero_img5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Calculate Your\nExact Age"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:textColor="@color/textPrimary"
                    android:gravity="center"
                    android:layout_marginTop="12dp"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Know your exact age in years,\nmonths, weeks, days and more."
                    android:textColor="@color/textSecondary"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_marginTop="8dp"
                    android:layout_gravity="center"/>


                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/textview1"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:textColor="@color/textPrimary"
                    android:drawableStart="@drawable/outline_calendar_month_24"
                    android:drawablePadding="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/etdob"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:textColorHint="@color/textSecondary"
                android:focusable="false"
                android:clickable="true"
                android:cursorVisible="false"
                android:inputType="none"

                android:autofillHints=""
                android:background="@drawable/edittext_bg"
                android:ems="10"
                android:hint="@string/textview1"
                android:minHeight="48dp"
                android:paddingHorizontal="18dp"
                android:paddingVertical="16dp"
                android:text=""
                tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

            <ImageView
                android:id="@+id/DobCalendar"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:contentDescription="@string/dobcalendar1"
                android:layout_marginEnd="4dp"
                android:backgroundTint="#F40707"
                android:src="@drawable/calendar_icon1" />

        </LinearLayout>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:textColor="@color/textPrimary"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/textview2"
                    android:drawableStart="@drawable/outline_calendar_month_24"
                    android:drawablePadding="8dp"/>

                <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

                    <EditText
                        android:id="@+id/etcurrdate"
                        android:layout_width="0dp"
                        android:layout_height="56dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:textColorHint="@color/textSecondary"
                        android:autofillHints=""
                        android:background="@drawable/edittext_bg"
                        android:ems="10"
                        android:hint="@string/textview2"
                        android:focusable="false"
                        android:clickable="true"
                        android:cursorVisible="false"
                        android:inputType="none"
                        android:minHeight="48dp"
                        android:paddingHorizontal="18dp"
                        android:paddingVertical="16dp"
                        android:text=""
                        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

            <ImageView
                android:id="@+id/currCalendar"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginEnd="4dp"
                android:contentDescription="@string/dobcalendar2"
                android:src="@drawable/calendar_icon1"/>

                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnCalculate"
                    android:layout_width="match_parent"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_height="56dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="25dp"
                    android:onClick="openActivity"
                    app:icon="@drawable/outline_cake_24"
                    app:iconGravity="textStart"
                    app:iconTint="@color/textPrimary"
                    app:iconPadding="8dp"
                    android:text="@string/btnCalculate"
                    android:textAllCaps="false"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:backgroundTint="#FDD631"
                    app:cornerRadius="18dp" />


                <TextView
                    android:id="@+id/txtFooter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="20dp"
                    android:text="Crafted with ❤️ by Salim Ali"
                    android:textSize="12sp"
                    android:textColor="@color/textSecondary"
                    android:alpha="0.75"
                    android:fontFamily="sans-serif-medium" />


            </LinearLayout>
        </ScrollView>


    <!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
</androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Sidebar -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/drawer_menu" />

</androidx.drawerlayout.widget.DrawerLayout>